--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 colored = "3.0.0"
 dotenv = "0.15.0"
+poise = "0.6.1"
 serenity = "0.12.4"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
