--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2024"
 [dependencies]
 serde_json = { version = "1.0.145" }
 colored = "3.0.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 poise = "0.6.1"
 serde = "1.0.228"
 serenity = "0.12.4"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 rand = "0.9.2"
+rusqlite = { version = "0.37", features = ["bundled"] }
+anyhow = "1.0.100"
+chrono = "0.4.42"
