--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ rand = "0.9.2"
 rusqlite = { version = "0.37", features = ["bundled"] }
 anyhow = "1.0.100"
 chrono = "0.4.42"
+
+[dev-dependencies]
+tempfile = "3"
