--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "discordbot"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 
 [dependencies]
@@ -15,6 +15,7 @@ rand = "0.9.2"
 rusqlite = { version = "0.37", features = ["bundled"] }
 anyhow = "1.0.100"
 chrono = "0.4.42"
+once_cell = "1.19.0"
 
 [dev-dependencies]
 tempfile = "3"
