--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rusqlite = { version = "0.37", features = ["bundled"] }
 anyhow = "1.0.100"
 chrono = "0.4.42"
 once_cell = "1.19.0"
+axum = "0.8.7"
 
 [dev-dependencies]
 tempfile = "3"
