--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "1.0.100"
 chrono = "0.4.42"
 once_cell = "1.19.0"
 axum = "0.8.7"
+tower-http = { version = "0.6.6", features = ["fs"] }
 
 [dev-dependencies]
 tempfile = "3"
