--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^2.0.0",
 		"@eslint/js": "^9.39.1",
+		"@faker-js/faker": "^10.1.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.48.8",
