--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ rusqlite = { version = "0.37", features = ["bundled"] }
 anyhow = "1.0.100"
 chrono = "0.4.42"
 once_cell = "1.19.0"
-axum = "0.8.7"
+axum = { version = "0.8.7", features = ["ws"] }
 tower-http = { version = "0.6.7", features = ["fs"] }
+uuid = { version = "1.4.2", features = ["v4"] }
 
 [dev-dependencies]
 tempfile = "3"
