--- a/.github/workflows/rust tests.yml
+++ b/.github/workflows/rust tests.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
+      # Install Node.js for frontend build
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+
       # Optional but recommended cache for faster builds
       - name: Cache cargo registry + build
         uses: actions/cache@v4
