--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.19.0"
 axum = { version = "0.8.7", features = ["ws"] }
 tower-http = { version = "0.6.7", features = ["fs"] }
 uuid = { version = "1.4.2", features = ["v4"] }
+futures = "0.3.31"
 
 [dev-dependencies]
 tempfile = "3"
